--- a/home.html
+++ b/home.html
@@ -94,8 +94,9 @@
 					<div class="contact">
 						BOOKING<br/>
 						<strong>Nora Ibanez</strong><br />
-						079 876 11 21<br />
-						<a href="mailto:aaa@gmail.com">aaa@gmail.com</a>
+						+41 (0) 78 913 33 71<br />
+						+33 (0) 6 29 39 00 46
+						<a href="mailto:melinke.bookinga@gmail.com">melinke.booking@gmail.com</a>
 					</div>
 					<div class="row">
 						&nbsp;
