--- a/pro.html
+++ b/pro.html
@@ -38,7 +38,7 @@
 
 		<div class="container">
 			<div class="title">
-				<h1>Melink&eacute;</h1>
+				<img src="/img/title.png">
 			</div>
 			
 			<div class="row">
@@ -51,7 +51,7 @@
 								<object type="application/x-shockwave-flash" data="/files/player_mp3_maxi.swf" width="25" height="20">
 									 <param name="movie" value="/files/player_mp3_maxi.swf" />
 									 <param name="bgcolor" value="#000000" />
-									 <param name="FlashVars" value="mp3=test.mp3&amp;showslider=0&amp;width=25&amp;bgcolor1=000000&amp;bgcolor2=000000&amp;buttonovercolor=cccccc" />
+									 <param name="FlashVars" value="mp3=/files/01_Green_Lady.mp3&amp;showslider=0&amp;width=25&amp;bgcolor1=000000&amp;bgcolor2=000000&amp;buttonovercolor=cccccc" />
 								 </object>
 							 </td>
 						</tr>
@@ -61,7 +61,7 @@
 								<object type="application/x-shockwave-flash" data="/files/player_mp3_maxi.swf" width="25" height="20">
 									 <param name="movie" value="/files/player_mp3_maxi.swf" />
 									 <param name="bgcolor" value="#000000" />
-									 <param name="FlashVars" value="mp3=test.mp3&amp;showslider=0&amp;width=25&amp;bgcolor1=000000&amp;bgcolor2=000000&amp;buttonovercolor=cccccc" />
+									 <param name="FlashVars" value="mp3=/files/02_Burnout.mp3&amp;showslider=0&amp;width=25&amp;bgcolor1=000000&amp;bgcolor2=000000&amp;buttonovercolor=cccccc" />
 								 </object>
 							 </td>
 						</tr>
@@ -71,7 +71,7 @@
 								<object type="application/x-shockwave-flash" data="/files/player_mp3_maxi.swf" width="25" height="20">
 									 <param name="movie" value="/files/player_mp3_maxi.swf" />
 									 <param name="bgcolor" value="#000000" />
-									 <param name="FlashVars" value="mp3=test.mp3&amp;showslider=0&amp;width=25&amp;bgcolor1=000000&amp;bgcolor2=000000&amp;buttonovercolor=cccccc" />
+									 <param name="FlashVars" value="mp3=/files/03_Lampoon.mp3&amp;showslider=0&amp;width=25&amp;bgcolor1=000000&amp;bgcolor2=000000&amp;buttonovercolor=cccccc" />
 								 </object>
 							 </td>
 						</tr>
@@ -81,7 +81,7 @@
 								<object type="application/x-shockwave-flash" data="/files/player_mp3_maxi.swf" width="25" height="20">
 									 <param name="movie" value="/files/player_mp3_maxi.swf" />
 									 <param name="bgcolor" value="#000000" />
-									 <param name="FlashVars" value="mp3=test.mp3&amp;showslider=0&amp;width=25&amp;bgcolor1=000000&amp;bgcolor2=000000&amp;buttonovercolor=cccccc" />
+									 <param name="FlashVars" value="mp3=/files/04_My_Soul.mp3&amp;showslider=0&amp;width=25&amp;bgcolor1=000000&amp;bgcolor2=000000&amp;buttonovercolor=cccccc" />
 								 </object>
 							 </td>
 						</tr>
@@ -91,7 +91,7 @@
 								<object type="application/x-shockwave-flash" data="/files/player_mp3_maxi.swf" width="25" height="20">
 									 <param name="movie" value="/files/player_mp3_maxi.swf" />
 									 <param name="bgcolor" value="#000000" />
-									 <param name="FlashVars" value="mp3=test.mp3&amp;showslider=0&amp;width=25&amp;bgcolor1=000000&amp;bgcolor2=000000&amp;buttonovercolor=cccccc" />
+									 <param name="FlashVars" value="mp3=/files/05_Hard_Times.mp3&amp;showslider=0&amp;width=25&amp;bgcolor1=000000&amp;bgcolor2=000000&amp;buttonovercolor=cccccc" />
 								 </object>
 							 </td>
 						</tr>
@@ -104,12 +104,18 @@
 
 				<div class="span3">
 					<div class="contact">
-						<strong>Jean Henri</strong><br />
-						079 876 11 21<br />
-						<a href="mailto:aaa@gmail.com">aaa@gmail.com</a>
+						BOOKING<br/>
+						<strong>Nora Ibanez</strong><br />
+						+41 (0) 78 913 33 71<br />
+						+33 (0) 6 29 39 00 46
+						<a href="mailto:melinke.bookinga@gmail.com">melinke.booking@gmail.com</a>
 					</div>
-					<div class="icons"><a href="http://www.facebook.com"><img src="img/icons/facebook.png" /></a></div>
-					<div class="icons"><a href="http://www.twitter.com"><img src="img/icons/twitter.png" /></a></div>
+					<div class="row">
+						&nbsp;
+					</div>
+					<div class="icons"><a href="http://www.mx3.ch/artist/melinke"><img src="img/mx3.png" /></a></div>
+					<div class="icons"><a href="http://www.facebook.com/melinkeband"><img src="img/icons/facebook.png" /></a></div>
+					<div class="icons"><a href="http://twitter.com/Melinkeband"><img src="img/icons/twitter.png" /></a></div>
 				</div>
 				
 			</div>
