--- a/pro.html
+++ b/pro.html
@@ -46,7 +46,7 @@
 				<div class="span3">
 					<table class="songs">
 						<tr>
-							<td width="150px">1. Green Lady</td>
+							<td width="150px"><a href="/files/01_Green_Lady.mp3">1. Green Lady</a></td>
 							<td>
 								<object type="application/x-shockwave-flash" data="/files/player_mp3_maxi.swf" width="25" height="20">
 									 <param name="movie" value="/files/player_mp3_maxi.swf" />
@@ -56,7 +56,7 @@
 							 </td>
 						</tr>
 						<tr>
-							<td>2. Burnout</td>
+							<td><a href="/files/02_Burnout.mp3">2. Burnout</td>
 							<td>
 								<object type="application/x-shockwave-flash" data="/files/player_mp3_maxi.swf" width="25" height="20">
 									 <param name="movie" value="/files/player_mp3_maxi.swf" />
@@ -66,7 +66,7 @@
 							 </td>
 						</tr>
 						<tr>
-							<td>3. Lampoon</td>
+							<td><a href="/files/03_Lampoon.mp3">3. Lampoon</td>
 							<td>
 								<object type="application/x-shockwave-flash" data="/files/player_mp3_maxi.swf" width="25" height="20">
 									 <param name="movie" value="/files/player_mp3_maxi.swf" />
@@ -76,7 +76,7 @@
 							 </td>
 						</tr>
 						<tr>
-							<td>4. My Soul</td>
+							<td><a href="/files/04_My_Soul.mp3">4. My Soul</td>
 							<td>
 								<object type="application/x-shockwave-flash" data="/files/player_mp3_maxi.swf" width="25" height="20">
 									 <param name="movie" value="/files/player_mp3_maxi.swf" />
@@ -86,7 +86,7 @@
 							 </td>
 						</tr>
 						<tr>
-							<td>5. Hard Times</td>
+							<td><a href="/files/05_Hard_Times.mp3">5. Hard Times</td>
 							<td>
 								<object type="application/x-shockwave-flash" data="/files/player_mp3_maxi.swf" width="25" height="20">
 									 <param name="movie" value="/files/player_mp3_maxi.swf" />
