--- a/home.html
+++ b/home.html
@@ -11,6 +11,7 @@
 
 		<script src="/js/jquery-1.7.2.min.js" type="text/javascript" charset="utf-8"></script>
 		<script type="text/javascript" src="/js/jquery.jplayer.min.js"></script>
+		<link href='http://fonts.googleapis.com/css?family=Kite+One' rel='stylesheet' type='text/css'>
 	</head>
 	<body>
 
@@ -32,6 +33,10 @@
 			}
 			.contact {
 				text-align: right;
+			}
+			.text-pres {
+				font-family: 'Kite One', sans-serif;
+				margin: 20px 0;
 			}
 		</style>
 
@@ -86,8 +91,22 @@
 					</table>
 				</div>
 
-				<div class="span6">
-					&nbsp;
+				<div class="span6 text-pres">
+					<p><strong>Melink&eacute;</strong>, le mot sonne comme une m&eacute;lodie, il se chante sit&ocirc;t qu'il s'&eacute;voque.</p>
+
+					<p>Et pour cause, il s'agit du nouveau projet d'<strong>Emeline Kakou</strong>, voix incomparable au timbre soul,
+					accompagn&eacute;e par des musiciens dont l'exp&eacute;rience n'est plus &agrave; prouver.</p>
+
+					<p>Chercher &agrave; d&eacute;crire &agrave; tout prix le style de Melink&eacute; serait d&eacute;j&agrave; une erreur. Nous ne sommes pas ici
+					dans des carcans. Si le son est ancr&eacute; dans la musique afro-am&eacute;ricaine, les &eacute;vasions du c&ocirc;t&eacute; de la
+					pop, du trip-hop, et de quelques touches electro ne sont pas rares. Alors nous parlerons de <strong>nu-soul</strong>,
+					parce qu'il faut bien dire quelque chose.</p>
+
+					<!-- <p>L'important reste la sc&egrave;ne, lieu de r&eacute;v&eacute;lation, car c'est l&agrave; que Melink&eacute; prend tout son sens. Offrant &agrave; -->
+					<!-- tous ceux qui sauront tendre l'oreille des vibrations dont ils se souviendront longtemps.</p> -->
+
+					<!-- <p>Le premier EP, intitul&eacute; <strong>&laquo; Thinkin' Out Loud &raquo;</strong> sortira d&eacute;but 2013, et apportera &agrave; n'en point douter, -->
+					<!-- une onde de fra&icirc;cheur n&eacute;cessaire au paysage musical Suisse.</p> -->
 				</div>
 
 				<div class="span3">
