--- a/home.html
+++ b/home.html
@@ -11,13 +11,13 @@
 
 		<script src="/js/jquery-1.7.2.min.js" type="text/javascript" charset="utf-8"></script>
 		<script type="text/javascript" src="/js/jquery.jplayer.min.js"></script>
-		<link href='http://fonts.googleapis.com/css?family=Kite+One' rel='stylesheet' type='text/css'>
+		<!-- <link href='http://fonts.googleapis.com/css?family=Kite+One' rel='stylesheet' type='text/css'> -->
 	</head>
 	<body>
 
 		<style type="text/css">
 			body {
-				background: #000 url(img/background.jpg) no-repeat top center;
+				background: #000 url(img/melinke_ok_2_rgb.jpg) no-repeat top center;
 			}
 			.container {
 				color: #fff;
@@ -34,9 +34,20 @@
 			.contact {
 				text-align: right;
 			}
+			.agenda {
+				margin-top: 50px;
+			}
 			.text-pres {
-				font-family: 'Kite One', sans-serif;
+				font-family: "Helvetica Neue", "Arial", sans-serif; 
 				margin: 20px 0;
+				text-align: justify;
+			}
+
+			a, a:visited {
+				color: white;
+			}
+			a:hover {
+				color: white;
 			}
 		</style>
 
@@ -51,11 +62,7 @@
 				<div class="span3">
 					<table class="songs">
 						<tr>
-							<td width="150px">1. Green Lady</td>
-							<td></td>
-						</tr>
-						<tr>
-							<td>2. Burnout</td>
+							<td>Burnout</td>
 							<td>
 								<object type="application/x-shockwave-flash" data="/files/player_mp3_maxi.swf" width="25" height="20">
 									 <param name="movie" value="/files/player_mp3_maxi.swf" />
@@ -65,7 +72,7 @@
 							 </td>
 						</tr>
 						<tr>
-							<td>3. Lampoon</td>
+							<td>Lampoon</td>
 							<td>
 								<object type="application/x-shockwave-flash" data="/files/player_mp3_maxi.swf" width="25" height="20">
 									 <param name="movie" value="/files/player_mp3_maxi.swf" />
@@ -75,11 +82,7 @@
 							 </td>
 						</tr>
 						<tr>
-							<td>4. My Soul</td>
-							<td></td>
-						</tr>
-						<tr>
-							<td>5. Hard Times</td>
+							<td>Hard Times</td>
 							<td>
 								<object type="application/x-shockwave-flash" data="/files/player_mp3_maxi.swf" width="25" height="20">
 									 <param name="movie" value="/files/player_mp3_maxi.swf" />
@@ -89,6 +92,18 @@
 							 </td>
 						</tr>
 					</table>
+
+					<div class="agenda">
+						<strong>Agenda</strong>
+
+						<ul class="">
+							<li>
+								<strong>26.05.2013 - 13:00</strong><br/>
+								<a href="http://bqr.ch/index.php?option=com_allevents&task=display&view=event&layout=default&ei=6:bqrock&Itemid=18">St. Maurice, Switzerland</a>
+							</li>
+						</ul>
+					</div>
+
 				</div>
 
 				<div class="span6 text-pres">
@@ -112,20 +127,20 @@
 				<div class="span3">
 					<div class="contact">
 						BOOKING<br/>
-						<strong>Nora Ibanez</strong><br />
-						+41 (0) 78 913 33 71<br />
-						+33 (0) 6 29 39 00 46
-						<a href="mailto:melinke.bookinga@gmail.com">melinke.booking@gmail.com</a>
+						<strong>Mehdi Mokdad</strong><br />
+						+41 (0) 78 766 92 85
+						<a href="mailto:melinke.booking@gmail.com">melinke.booking@gmail.com</a>
 					</div>
 					<div class="row">
 						&nbsp;
 					</div>
 					<div class="icons"><a href="http://www.mx3.ch/artist/melinke"><img src="img/mx3.png" /></a></div>
 					<div class="icons"><a href="http://www.facebook.com/melinkeband"><img src="img/icons/facebook.png" /></a></div>
-					<div class="icons"><a href="http://twitter.com/Melinkeband"><img src="img/icons/twitter.png" /></a></div>
+					<div class="icons"><a href="http://twitter.com/Melinkeband"><img src="img/twitter-bird-dark-bgs.png" width="28" height="28" /></a></div>
 				</div>
 				
 			</div>
+
 		</div>
 	</body>
 </html>
